NAV / Adpt. Added z-index to .fix-menu

--- a/css/main.css
+++ b/css/main.css
@@ -444,6 +444,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 3;
 }
 @media (min-width: 1024px) {
   .fix-menu {
