--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -25,6 +25,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
+	z-index: 3;
 
 	@media(min-width: 1024px) {
        position: unset;
